force-app/main/default/objects/Adoption_Match__c/Adoption_Match__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter] Contains records that show a match between animals that are available for adoption and potential adopters based on their adopter profile.  Is also used to allow an Adopter to express interest in one or more animals</description>
    <label>Adoption Match</label>
    <nameField>
        <displayFormat>ADMATCH{00000000}</displayFormat>
        <label>Adoption Match Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoption Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>