force-app/main/default/objects/Adoption_Match__c/fields/Adopter_Id__c.field-meta.xml
<CustomField>
    <fullName>Adopter_Id__c</fullName>
    <formula>Animal__r.Previous_Current_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adopter Id</label>
    <type>Text</type>
</CustomField>