force-app/main/default/objects/Adoption_Match__c/fields/Adopter_Profile__c.field-meta.xml
<CustomField>
    <fullName>Adopter_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adopter Profile</label>
    <referenceTo>Adopter_Profile__c</referenceTo>
    <relationshipLabel>Adoption Matches</relationshipLabel>
    <relationshipName>Adoption_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>