force-app/main/default/objects/Adoption_Match__c/fields/Adopter_Profile_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Adopter_Profile_Contact_Id__c</fullName>
    <formula>Adopter_Profile__r.Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adopter Profile Contact Id</label>
    <type>Text</type>
</CustomField>