force-app/main/default/objects/Adoption_Match__c/fields/Adopter_Profile_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Adopter_Profile_Contact_Name__c</fullName>
    <formula>Adopter_Profile__r.Contact__r.FirstName &amp; &quot; &quot; &amp;  Adopter_Profile__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adopter Profile Contact Name</label>
    <type>Text</type>
</CustomField>