force-app/main/default/objects/Adoption_Match__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Adoption Matches</relationshipLabel>
    <relationshipName>Adoption_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>