force-app/main/default/objects/Adoption_Match__c/fields/Auto_Matched__c.field-meta.xml
<CustomField>
    <fullName>Auto_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Matched</label>
    <type>Checkbox</type>
</CustomField>