force-app/main/default/objects/Adoption_Match__c/fields/Matched_Status__c.field-meta.xml
<CustomField>
    <fullName>Matched_Status__c</fullName>
    <label>Matched Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Matched</fullName>
            </value>
            <value>
                <fullName>Manually Matched</fullName>
            </value>
            <value>
                <fullName>Adopter Selected</fullName>
            </value>
            <value>
                <fullName>Adopted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>