force-app/main/default/objects/Adoption_Match__c/fields/Related_Animal_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Animal_Status__c</fullName>
    <formula>TEXT(Animal__r.Animal_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Animal Status</label>
    <type>Text</type>
</CustomField>