force-app/main/default/objects/Adoption_Match__c/fields/Successful_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Successful_Adoption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Successful Adoption</label>
    <type>Checkbox</type>
</CustomField>