force-app/main/default/objects/Adoption_Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Adopter_Profile__c</columns>
    <columns>Animal__c</columns>
    <columns>Auto_Matched__c</columns>
    <columns>Related_Animal_Status__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>